crawling_data_buoi_2

--- a/crawling_data_quora.ipynb
+++ b/crawling_data_quora.ipynb
@@ -2,20 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [],
    "source": [
     "import requests\n",
     "from bs4 import BeautifulSoup\n",
     "import json\n",
-    "import csv\n",
-    "import re"
+    "import csv"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 208,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 209,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 210,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,52 +47,60 @@
     "\n",
     "# Truy cập trang web\n",
     "url = 'https://www.imdb.com/search/title/?title=Axel&title_type=feature&release_date=2022-01-01,2024-07-10&sort=year,desc'\n",
-    "driver.get(url)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 100,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "driver.get(url)\n",
     "# Đợi một chút để trang web tải xong\n",
-    "time.sleep(3)\n",
-    "\n",
-    "# lấy link của các bộ phim\n",
-    "movie_links = driver.find_elements(By.CSS_SELECTOR, '.ipc-title-link-wrapper')\n",
-    "links = [movie.get_attribute('href') for movie in movie_links]\n",
-    "# lấy tiêu đề của các bộ phim\n",
-    "movie = driver.find_elements(By.CSS_SELECTOR, '.ipc-title__text')"
+    "time.sleep(3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 211,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Đóng trình duyệt\n",
-    "driver.quit()"
+    "# lấy data cua toan bo cac bo phim trong trang web\n",
+    "movie_elements = driver.find_elements(By.CSS_SELECTOR, '.ipc-metadata-list.ipc-metadata-list--dividers-between.sc-748571c8-0.jmWPOZ.detailed-list-view.ipc-metadata-list--base')\n",
+    "# Extract HTML nội dung từ mỗi element\n",
+    "html_content = []\n",
+    "for element in movie_elements:\n",
+    "    html_content.append(element.get_attribute('outerHTML'))\n",
+    "\n",
+    "# Join all HTML content into a single string\n",
+    "html_str = ''.join(html_content)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 212,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Đóng trình duyệt\n",
+    "driver.quit()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 218,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1. Beverly Hills Cop: Axel F https://www.imdb.com/title/tt3083016/?ref_=sr_t_1\n",
-      "2. Axel Falcon https://www.imdb.com/title/tt14257104/?ref_=sr_t_2\n"
+      "https://www.imdb.com/title/tt3083016/?ref_=sr_t_1\n",
+      "https://www.imdb.com/title/tt14257104/?ref_=sr_t_2\n"
      ]
     }
    ],
    "source": [
-    "for movie, link in zip(movie_links, links):\n",
-    "    print(movie.text,link)"
+    "# Parse HTML with BeautifulSoup\n",
+    "soup = BeautifulSoup(html_str, 'html.parser')\n",
+    "title = soup.find_all('a',class_='ipc-title-link-wrapper')\n",
+    "for ul in title:\n",
+    "    link = ul.get('href')\n",
+    "    print('https://www.imdb.com'+link)"
    ]
   }
  ],
