--- a/crawling_data_quora.ipynb
+++ b/crawling_data_quora.ipynb
@@ -205,58 +205,12 @@
     }
    ],
    "source": [
-    "# Khởi động ChromeDriver\n",
-    "service_film_detail = Service(ChromeDriverManager().install())\n",
-    "driver_film_detail = webdriver.Chrome(service=service_film_detail)\n",
-    "\n",
     "# Truy cập trang web\n",
-    "for i in divs:\n",
-    "    link = div.find('a', class_='ipc-title-link-wrapper')\n",
-    "    link_film = link.get('href')\n",
-    "    url_film = f'https://www.imdb.com{link_film}'\n",
-    "    print(url_film)\n",
-    "    driver_film_detail.get(url_film)\n",
-    "# Đợi một chút để trang web tải xong\n",
-    "    wait_film_detail = WebDriverWait(driver_film_detail, 10)\n",
-    "    # lấy data cac phim\n",
-    "    movie_elements_detail = driver_film_detail.find_elements(By.CSS_SELECTOR, '.ipc-metadata-list ipc-metadata-list--dividers-all ipc-metadata-list--base')\n",
-    "# Extract HTML nội dung từ mỗi element\n",
-    "    html_content_detail = []\n",
-    "    for element_detail in movie_elements_detail:\n",
-    "        html_content_detail.append(element_detail.get_attribute('outerHTML'))\n",
-    "\n",
-    "    # Join all HTML content into a single string\n",
-    "    html_str_detail = ''.join(html_content_detail)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 247,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Đóng trình duyệt\n",
-    "driver.quit()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 248,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[]\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Parse HTML with BeautifulSoup\n",
-    "soup_detail = BeautifulSoup(html_str_detail, 'html.parser')\n",
-    "divs_detail = soup_detail.find_all('div', class_='ipc-metadata-list-item__label')\n",
-    "print(divs_detail)"
+    "for i in link_film_acc:\n",
+    "    url_film = f'https://www.imdb.com{i}'\n",
+    "    r_content = requests.get(url_film)\n",
+    "    soup_detail = BeautifulSoup(r_content.content, 'html.parser')\n",
+    "    divs_detail = soup_detail.find_all('div', class_='ipc-metadata-list-item__label')"
    ]
   }
  ],
