--- a/crawling_data_quora.ipynb
+++ b/crawling_data_quora.ipynb
@@ -2,19 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
     "import requests\n",
     "from bs4 import BeautifulSoup\n",
     "import json\n",
-    "import csv"
+    "import csv\n",
+    "from datetime import datetime"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,13 +26,14 @@
     "from selenium.webdriver.chrome.options import Options\n",
     "from selenium.webdriver.support.ui import WebDriverWait\n",
     "from selenium.webdriver.support import expected_conditions as EC\n",
+    "from webdriver_manager.chrome import ChromeDriverManager\n",
     "from bs4 import BeautifulSoup\n",
     "import time"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -90,28 +92,29 @@
      "text": [
       "Error: Message: \n",
       "Stacktrace:\n",
-      "\tGetHandleVerifier [0x00B5C1C3+27395]\n",
-      "\t(No symbol) [0x00AF3DC4]\n",
-      "\t(No symbol) [0x009F1B7F]\n",
-      "\t(No symbol) [0x00A32C65]\n",
-      "\t(No symbol) [0x00A32D3B]\n",
-      "\t(No symbol) [0x00A6EC82]\n",
-      "\t(No symbol) [0x00A539E4]\n",
-      "\t(No symbol) [0x00A6CB24]\n",
-      "\t(No symbol) [0x00A53736]\n",
-      "\t(No symbol) [0x00A27541]\n",
-      "\t(No symbol) [0x00A280BD]\n",
-      "\tGetHandleVerifier [0x00E13A93+2876371]\n",
-      "\tGetHandleVerifier [0x00E67F5D+3221661]\n",
-      "\tGetHandleVerifier [0x00BDD634+556916]\n",
-      "\tGetHandleVerifier [0x00BE474C+585868]\n",
-      "\t(No symbol) [0x00AFCE04]\n",
-      "\t(No symbol) [0x00AF9818]\n",
-      "\t(No symbol) [0x00AF99B7]\n",
-      "\t(No symbol) [0x00AEBF0E]\n",
+      "\tGetHandleVerifier [0x002CC203+27395]\n",
+      "\t(No symbol) [0x00263E04]\n",
+      "\t(No symbol) [0x00161B7F]\n",
+      "\t(No symbol) [0x001A2C65]\n",
+      "\t(No symbol) [0x001A2D3B]\n",
+      "\t(No symbol) [0x001DEC82]\n",
+      "\t(No symbol) [0x001C39E4]\n",
+      "\t(No symbol) [0x001DCB24]\n",
+      "\t(No symbol) [0x001C3736]\n",
+      "\t(No symbol) [0x00197541]\n",
+      "\t(No symbol) [0x001980BD]\n",
+      "\tGetHandleVerifier [0x00583AB3+2876339]\n",
+      "\tGetHandleVerifier [0x005D7F7D+3221629]\n",
+      "\tGetHandleVerifier [0x0034D674+556916]\n",
+      "\tGetHandleVerifier [0x0035478C+585868]\n",
+      "\t(No symbol) [0x0026CE44]\n",
+      "\t(No symbol) [0x00269858]\n",
+      "\t(No symbol) [0x002699F7]\n",
+      "\t(No symbol) [0x0025BF4E]\n",
       "\tBaseThreadInitThunk [0x776BFCC9+25]\n",
       "\tRtlGetAppContainerNamedObjectPath [0x77A580CE+286]\n",
       "\tRtlGetAppContainerNamedObjectPath [0x77A5809E+238]\n",
+      "\t(No symbol) [0x00000000]\n",
       "\n"
      ]
     }
@@ -123,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +168,7 @@
    "source": [
     "# Parse HTML with BeautifulSoup\n",
     "soup = BeautifulSoup(html_str, 'html.parser')\n",
-    "\n",
+    "link_film_acc = []\n",
     "divs = soup.find_all('div', class_='ipc-title ipc-title--base ipc-title--title ipc-title-link-no-icon ipc-title--on-textPrimary sc-b189961a-9 iALATN dli-title')\n",
     "cout = 1\n",
     "# Lặp qua từng thẻ <div> để lấy tên phim và liên kết\n",
@@ -176,7 +179,7 @@
     "    # Kiểm tra nếu tìm thấy thẻ <a> và lấy href từ thuộc tính 'href'\n",
     "    if link:\n",
     "        link_film = link.get('href')\n",
-    "        \n",
+    "        link_film_acc.append(link_film)\n",
     "        # Lấy text từ thẻ <h3> bên trong thẻ <a>\n",
     "        title_film = link.find('h3', class_='ipc-title__text').text.strip()\n",
     "        first_dot_index = title_film.find('.')\n",
@@ -192,25 +195,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Gui yeu cau với User-Agent cua trinh duyet that\n",
+    "headers = {\n",
+    "    'User-Agent': 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/91.0.4472.124 Safari/537.36'\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "https://www.imdb.com/title/tt14257104/?ref_=sr_t_2\n",
-      "https://www.imdb.com/title/tt14257104/?ref_=sr_t_2\n"
+     "ename": "NameError",
+     "evalue": "name 'link_film_acc' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Truy cập trang web\u001b[39;00m\n\u001b[1;32m----> 3\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[43mlink_film_acc\u001b[49m:\n\u001b[0;32m      4\u001b[0m     url_film \u001b[38;5;241m=\u001b[39m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mhttps://www.imdb.com\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mi\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m      5\u001b[0m     r_content \u001b[38;5;241m=\u001b[39m requests\u001b[38;5;241m.\u001b[39mget(url_film, headers\u001b[38;5;241m=\u001b[39mheaders)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'link_film_acc' is not defined"
      ]
     }
    ],
    "source": [
     "# Truy cập trang web\n",
+    "\n",
     "for i in link_film_acc:\n",
     "    url_film = f'https://www.imdb.com{i}'\n",
-    "    r_content = requests.get(url_film)\n",
+    "    r_content = requests.get(url_film, headers=headers)\n",
     "    soup_detail = BeautifulSoup(r_content.content, 'html.parser')\n",
-    "    divs_detail = soup_detail.find_all('div', class_='ipc-metadata-list-item__label')"
+    "    title_film_detail = soup_detail.find('span', class_='hero__primary-text')\n",
+    "    detail = soup_detail.find('li', {'data-testid': 'title-details-releasedate'})\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "release_date_html = detail.find('a', class_='ipc-metadata-list-item__list-content-item')\n",
+    "    release_date_str = release_date_html.text\n",
+    "    release_date_str = release_date.split('(')[0].strip() \n",
+    "    release_date = datetime.strptime(release_date_str, \"%B %d, %Y\")\n",
+    "    print(title_film_detail.text,date_obj)"
    ]
   }
  ],
