--- a/crawling_data_quora.ipynb
+++ b/crawling_data_quora.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,18 +153,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 68,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 Beverly Hills Cop: Axel F https://www.imdb.com/title/tt3083016/?ref_=sr_t_1\n",
-      "2 Axel Falcon https://www.imdb.com/title/tt14257104/?ref_=sr_t_2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Parse HTML with BeautifulSoup\n",
     "soup = BeautifulSoup(html_str, 'html.parser')\n",
@@ -180,22 +171,12 @@
     "    if link:\n",
     "        link_film = link.get('href')\n",
     "        link_film_acc.append(link_film)\n",
-    "        # Lấy text từ thẻ <h3> bên trong thẻ <a>\n",
-    "        title_film = link.find('h3', class_='ipc-title__text').text.strip()\n",
-    "        first_dot_index = title_film.find('.')\n",
-    "        if first_dot_index != -1:\n",
-    "        # Loại bỏ số đầu và dấu chấm\n",
-    "            new_title = title_film[first_dot_index + 2:].strip()\n",
-    "        else:\n",
-    "            new_title = title_film  # Nếu không có dấu chấm, giữ nguyên tiêu đề\n",
-    "        # In ra tên phim và liên kết\n",
-    "        print(cout,new_title, 'https://www.imdb.com' + link_film)\n",
     "        cout += 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,18 +188,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'link_film_acc' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Truy cập trang web\u001b[39;00m\n\u001b[1;32m----> 3\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[43mlink_film_acc\u001b[49m:\n\u001b[0;32m      4\u001b[0m     url_film \u001b[38;5;241m=\u001b[39m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mhttps://www.imdb.com\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mi\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m      5\u001b[0m     r_content \u001b[38;5;241m=\u001b[39m requests\u001b[38;5;241m.\u001b[39mget(url_film, headers\u001b[38;5;241m=\u001b[39mheaders)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'link_film_acc' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://www.imdb.com/title/tt3083016/?ref_=sr_t_1 Cảnh Sát Beverly Hills: Axel F 2024-07-03 00:00:00 United States 6.5 $150,000,000 Action\n",
+      "https://www.imdb.com/title/tt14257104/?ref_=sr_t_2 Axel Falcon 2024-06-01 00:00:00 United Kingdom None £4,000 Action\n"
      ]
     }
    ],
@@ -229,9 +207,31 @@
     "    url_film = f'https://www.imdb.com{i}'\n",
     "    r_content = requests.get(url_film, headers=headers)\n",
     "    soup_detail = BeautifulSoup(r_content.content, 'html.parser')\n",
+    "    # Title cua bo phim\n",
     "    title_film_detail = soup_detail.find('span', class_='hero__primary-text')\n",
-    "    detail = soup_detail.find('li', {'data-testid': 'title-details-releasedate'})\n",
-    "    "
+    "    # Noi dung cua Detail\n",
+    "    detail_release_date = soup_detail.find('li', {'data-testid': 'title-details-releasedate'})\n",
+    "    # release_date_first\n",
+    "    release_date_html = detail_release_date.find('a', class_='ipc-metadata-list-item__list-content-item')\n",
+    "    release_date_str_full = release_date_html.text\n",
+    "    release_date_str = release_date_str_full.split('(')[0].strip() \n",
+    "    release_date_first = datetime.strptime(release_date_str, \"%B %d, %Y\")\n",
+    "    # Country of origin\n",
+    "    detail_country_origin = soup_detail.find('li', {'data-testid': 'title-details-origin'})\n",
+    "    country_origin = detail_country_origin.find('a', class_='ipc-metadata-list-item__list-content-item ipc-metadata-list-item__list-content-item--link')\n",
+    "    # IMDB Rating\n",
+    "    detail_rating = soup_detail.find('div', {'data-testid': 'hero-rating-bar__aggregate-rating__score'})\n",
+    "    rating_str = detail_rating.find('span',class_='sc-eb51e184-1 cxhhrI') if detail_rating else None\n",
+    "    rating = rating_str.text.strip() if rating_str else None\n",
+    "    # Budget\n",
+    "    detail_budget = soup_detail.find('li', {'data-testid': 'title-boxoffice-budget'})\n",
+    "    budget_full = detail_budget.find('span',class_='ipc-metadata-list-item__list-content-item') if detail_budget else None\n",
+    "    budget_str = budget_full.text\n",
+    "    budget = budget_str.split('(')[0].strip() \n",
+    "    # Genres\n",
+    "    detail_genres = soup_detail.find('div', {'data-testid': 'genres'})\n",
+    "    genres = detail_genres.find('span',class_='ipc-chip__text') \n",
+    "    print(url_film, title_film_detail.text, release_date_first, country_origin.text, rating, budget, genres.text)"
    ]
   },
   {
@@ -240,11 +240,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "release_date_html = detail.find('a', class_='ipc-metadata-list-item__list-content-item')\n",
-    "    release_date_str = release_date_html.text\n",
-    "    release_date_str = release_date.split('(')[0].strip() \n",
-    "    release_date = datetime.strptime(release_date_str, \"%B %d, %Y\")\n",
-    "    print(title_film_detail.text,date_obj)"
+    "print()"
    ]
   }
  ],
