--- a/crawling_data_quora.ipynb
+++ b/crawling_data_quora.ipynb
@@ -2,20 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [],
    "source": [
     "import requests\n",
-    "from bs4 import BeautifulSoup\n",
     "import json\n",
     "import csv\n",
-    "from datetime import datetime"
+    "import psycopg2\n",
+    "import re\n",
+    "import time"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,12 +29,14 @@
     "from selenium.webdriver.support import expected_conditions as EC\n",
     "from webdriver_manager.chrome import ChromeDriverManager\n",
     "from bs4 import BeautifulSoup\n",
-    "import time"
+    "from datetime import datetime\n",
+    "from bs4 import BeautifulSoup\n",
+    "from psycopg2 import OperationalError"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [
     {
@@ -92,29 +95,28 @@
      "text": [
       "Error: Message: \n",
       "Stacktrace:\n",
-      "\tGetHandleVerifier [0x002CC203+27395]\n",
-      "\t(No symbol) [0x00263E04]\n",
-      "\t(No symbol) [0x00161B7F]\n",
-      "\t(No symbol) [0x001A2C65]\n",
-      "\t(No symbol) [0x001A2D3B]\n",
-      "\t(No symbol) [0x001DEC82]\n",
-      "\t(No symbol) [0x001C39E4]\n",
-      "\t(No symbol) [0x001DCB24]\n",
-      "\t(No symbol) [0x001C3736]\n",
-      "\t(No symbol) [0x00197541]\n",
-      "\t(No symbol) [0x001980BD]\n",
-      "\tGetHandleVerifier [0x00583AB3+2876339]\n",
-      "\tGetHandleVerifier [0x005D7F7D+3221629]\n",
-      "\tGetHandleVerifier [0x0034D674+556916]\n",
-      "\tGetHandleVerifier [0x0035478C+585868]\n",
-      "\t(No symbol) [0x0026CE44]\n",
-      "\t(No symbol) [0x00269858]\n",
-      "\t(No symbol) [0x002699F7]\n",
-      "\t(No symbol) [0x0025BF4E]\n",
+      "\tGetHandleVerifier [0x00CEC203+27395]\n",
+      "\t(No symbol) [0x00C83E04]\n",
+      "\t(No symbol) [0x00B81B7F]\n",
+      "\t(No symbol) [0x00BC2C65]\n",
+      "\t(No symbol) [0x00BC2D3B]\n",
+      "\t(No symbol) [0x00BFEC82]\n",
+      "\t(No symbol) [0x00BE39E4]\n",
+      "\t(No symbol) [0x00BFCB24]\n",
+      "\t(No symbol) [0x00BE3736]\n",
+      "\t(No symbol) [0x00BB7541]\n",
+      "\t(No symbol) [0x00BB80BD]\n",
+      "\tGetHandleVerifier [0x00FA3AB3+2876339]\n",
+      "\tGetHandleVerifier [0x00FF7F7D+3221629]\n",
+      "\tGetHandleVerifier [0x00D6D674+556916]\n",
+      "\tGetHandleVerifier [0x00D7478C+585868]\n",
+      "\t(No symbol) [0x00C8CE44]\n",
+      "\t(No symbol) [0x00C89858]\n",
+      "\t(No symbol) [0x00C899F7]\n",
+      "\t(No symbol) [0x00C7BF4E]\n",
       "\tBaseThreadInitThunk [0x776BFCC9+25]\n",
       "\tRtlGetAppContainerNamedObjectPath [0x77A580CE+286]\n",
       "\tRtlGetAppContainerNamedObjectPath [0x77A5809E+238]\n",
-      "\t(No symbol) [0x00000000]\n",
       "\n"
      ]
     }
@@ -126,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +178,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 164,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Kết nối thành công!\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# Ket noi database\n",
+    "# Thong tin ket noi\n",
+    "hostname = 'localhost' \n",
+    "# port = 5432\n",
+    "database = 'postgres'\n",
+    "username = 'da'\n",
+    "password = 'da123@'\n",
+    "\n",
+    "# Ket noi den database\n",
+    "try:\n",
+    "    connection = psycopg2.connect(\n",
+    "        host=hostname,\n",
+    "        # port=port,\n",
+    "        database=database,\n",
+    "        user=username,\n",
+    "        password=password\n",
+    "    )\n",
+    "    cursor = connection.cursor()\n",
+    "    print(\"Kết nối thành công!\")\n",
+    "\n",
+    "    # Kiểm tra quyền truy cập\n",
+    "    cursor.execute(\"\"\"\n",
+    "        SELECT grantee, table_schema, table_name, privilege_type\n",
+    "        FROM information_schema.role_table_grants\n",
+    "        WHERE table_schema IN ('public');\n",
+    "    \"\"\")\n",
+    "    grants = cursor.fetchall()\n",
+    "    for grant in grants:\n",
+    "        print(f\"Grantee: {grant[0]}, Schema: {grant[1]}, Table: {grant[2]}, Privilege: {grant[3]}\")\n",
+    "except OperationalError as e:\n",
+    "    print(f\"Lỗi kết nối: {e}\")\n",
+    "# finally:\n",
+    "#     if connection:\n",
+    "#         cursor.close()\n",
+    "#         connection.close()\n",
+    "#         print(\"Kết nối PostgreSQL đã đóng\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,20 +243,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://www.imdb.com/title/tt3083016/?ref_=sr_t_1 Cảnh Sát Beverly Hills: Axel F 2024-07-03 00:00:00 United States 6.5 $150,000,000 Action\n",
-      "https://www.imdb.com/title/tt14257104/?ref_=sr_t_2 Axel Falcon 2024-06-01 00:00:00 United Kingdom None £4,000 Action\n"
+      "https://www.imdb.com/title/tt3083016/?ref_=sr_t_1 Cảnh Sát Beverly Hills: Axel F 2024-07-03 00:00:00 United States 6.5 $150,000,000 $ 150000000 Action\n",
+      "SQL Error for https://www.imdb.com/title/tt3083016/?ref_=sr_t_1: relation \"CRAWLING_DATA.film\" does not exist\n",
+      "LINE 2:     insert into \"CRAWLING_DATA\".film (url_film, name_film, r...\n",
+      "                        ^\n",
+      "\n",
+      "https://www.imdb.com/title/tt14257104/?ref_=sr_t_2 Axel Falcon 2024-06-01 00:00:00 United Kingdom None £4,000 £ 4000 Action\n",
+      "SQL Error for https://www.imdb.com/title/tt14257104/?ref_=sr_t_2: relation \"CRAWLING_DATA.film\" does not exist\n",
+      "LINE 2:     insert into \"CRAWLING_DATA\".film (url_film, name_film, r...\n",
+      "                        ^\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "# Truy cập trang web\n",
+    "# Truy cập trang web va lay du lieu\n",
     "\n",
     "for i in link_film_acc:\n",
     "    url_film = f'https://www.imdb.com{i}'\n",
@@ -209,6 +272,7 @@
     "    soup_detail = BeautifulSoup(r_content.content, 'html.parser')\n",
     "    # Title cua bo phim\n",
     "    title_film_detail = soup_detail.find('span', class_='hero__primary-text')\n",
+    "    name_film = title_film_detail.text\n",
     "    # Noi dung cua Detail\n",
     "    detail_release_date = soup_detail.find('li', {'data-testid': 'title-details-releasedate'})\n",
     "    # release_date_first\n",
@@ -218,29 +282,38 @@
     "    release_date_first = datetime.strptime(release_date_str, \"%B %d, %Y\")\n",
     "    # Country of origin\n",
     "    detail_country_origin = soup_detail.find('li', {'data-testid': 'title-details-origin'})\n",
-    "    country_origin = detail_country_origin.find('a', class_='ipc-metadata-list-item__list-content-item ipc-metadata-list-item__list-content-item--link')\n",
+    "    find_country_origin = detail_country_origin.find('a', class_='ipc-metadata-list-item__list-content-item ipc-metadata-list-item__list-content-item--link')\n",
+    "    country_origin = find_country_origin.text\n",
     "    # IMDB Rating\n",
     "    detail_rating = soup_detail.find('div', {'data-testid': 'hero-rating-bar__aggregate-rating__score'})\n",
     "    rating_str = detail_rating.find('span',class_='sc-eb51e184-1 cxhhrI') if detail_rating else None\n",
-    "    rating = rating_str.text.strip() if rating_str else None\n",
+    "    rating = float(rating_str.text.strip()) if rating_str else None\n",
     "    # Budget\n",
     "    detail_budget = soup_detail.find('li', {'data-testid': 'title-boxoffice-budget'})\n",
     "    budget_full = detail_budget.find('span',class_='ipc-metadata-list-item__list-content-item') if detail_budget else None\n",
     "    budget_str = budget_full.text\n",
     "    budget = budget_str.split('(')[0].strip() \n",
+    "    currency_budget = re.findall(r'\\D+', budget)[0]\n",
+    "    amount_bg = re.findall(r'\\d+', budget_str)\n",
+    "    amount_budget = int(''.join(amount_bg))\n",
     "    # Genres\n",
     "    detail_genres = soup_detail.find('div', {'data-testid': 'genres'})\n",
-    "    genres = detail_genres.find('span',class_='ipc-chip__text') \n",
-    "    print(url_film, title_film_detail.text, release_date_first, country_origin.text, rating, budget, genres.text)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print()"
+    "    genres_str = detail_genres.find('span',class_='ipc-chip__text') \n",
+    "    genres = genres_str.text\n",
+    "    print(url_film, title_film_detail.text, release_date_first, country_origin, rating, budget, currency_budget, amount_budget , genres)\n",
+    "    # insert du lieu vao database\n",
+    "    insert_query = '''\n",
+    "    insert into \"CRAWLING_DATA\".film (url_film, name_film, release_date, country_origin, rating, budget, currency_budget, amount_budget, genres)\n",
+    "    VALUES (%s, %s, %s, %s, %s, %s, %s, %s, %s)\n",
+    "    '''\n",
+    "    try:\n",
+    "        cursor.execute(insert_query,(url_film, name_film, release_date_first,  country_origin, rating, budget, currency_budget, amount_budget, genres))\n",
+    "        # Lưu thay đổi\n",
+    "        connection.commit()\n",
+    "    except Exception as e:\n",
+    "        print(f\"SQL Error for {url_film}: {e}\")\n",
+    "        connection.rollback()\n",
+    "    "
    ]
   }
  ],
