--- a/crawling_data_quora.ipynb
+++ b/crawling_data_quora.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,26 +36,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Đường dẫn đến ChromeDriver\n",
-    "driver_path = 'path/to/chromedriver'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Khởi động ChromeDriver\n",
-    "service = Service(ChromeDriverManager().install())\n",
+    "service = Service(ChromeDriverManager().install())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
     "driver = webdriver.Chrome(service=service)\n",
     "\n",
     "# Truy cập trang web\n",
-    "url = 'https://www.imdb.com/search/title/?title=axel&title_type=feature&release_date=2022-01-01,2024-07-10&sort=year,desc'\n",
+    "url = 'https://www.imdb.com/search/title/?title_type=feature&release_date=2022-01-01,2024-07-30&sort=year,desc'\n",
     "driver.get(url)\n",
     "# Đợi một chút để trang web tải xong\n",
     "wait = WebDriverWait(driver, 10)"
@@ -63,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,37 +85,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Error: Message: \n",
+      "Error: Message: element click intercepted: Element is not clickable at point (499, 9955)\n",
+      "  (Session info: chrome=127.0.6533.88)\n",
       "Stacktrace:\n",
-      "\tGetHandleVerifier [0x00CEC203+27395]\n",
-      "\t(No symbol) [0x00C83E04]\n",
-      "\t(No symbol) [0x00B81B7F]\n",
-      "\t(No symbol) [0x00BC2C65]\n",
-      "\t(No symbol) [0x00BC2D3B]\n",
-      "\t(No symbol) [0x00BFEC82]\n",
-      "\t(No symbol) [0x00BE39E4]\n",
-      "\t(No symbol) [0x00BFCB24]\n",
-      "\t(No symbol) [0x00BE3736]\n",
-      "\t(No symbol) [0x00BB7541]\n",
-      "\t(No symbol) [0x00BB80BD]\n",
-      "\tGetHandleVerifier [0x00FA3AB3+2876339]\n",
-      "\tGetHandleVerifier [0x00FF7F7D+3221629]\n",
-      "\tGetHandleVerifier [0x00D6D674+556916]\n",
-      "\tGetHandleVerifier [0x00D7478C+585868]\n",
-      "\t(No symbol) [0x00C8CE44]\n",
-      "\t(No symbol) [0x00C89858]\n",
-      "\t(No symbol) [0x00C899F7]\n",
-      "\t(No symbol) [0x00C7BF4E]\n",
-      "\tBaseThreadInitThunk [0x776BFCC9+25]\n",
-      "\tRtlGetAppContainerNamedObjectPath [0x77A580CE+286]\n",
-      "\tRtlGetAppContainerNamedObjectPath [0x77A5809E+238]\n",
+      "\tGetHandleVerifier [0x00B18923+23283]\n",
+      "\t(No symbol) [0x00ADE934]\n",
+      "\t(No symbol) [0x00A10733]\n",
+      "\t(No symbol) [0x00A591C7]\n",
+      "\t(No symbol) [0x00A575D9]\n",
+      "\t(No symbol) [0x00A554CB]\n",
+      "\t(No symbol) [0x00A54AAF]\n",
+      "\t(No symbol) [0x00A499EF]\n",
+      "\t(No symbol) [0x00A7441C]\n",
+      "\t(No symbol) [0x00A49485]\n",
+      "\t(No symbol) [0x00A746B4]\n",
+      "\t(No symbol) [0x00A8CB8D]\n",
+      "\t(No symbol) [0x00A741B6]\n",
+      "\t(No symbol) [0x00A48017]\n",
+      "\t(No symbol) [0x00A4890D]\n",
+      "\tGetHandleVerifier [0x00C0A5F3+1013699]\n",
+      "\tGetHandleVerifier [0x00C13E4C+1052700]\n",
+      "\tGetHandleVerifier [0x00C0D4B4+1025668]\n",
+      "\tGetHandleVerifier [0x00B3EA2B+179195]\n",
+      "\t(No symbol) [0x00AE6833]\n",
+      "\t(No symbol) [0x00AE3198]\n",
+      "\t(No symbol) [0x00AE3337]\n",
+      "\t(No symbol) [0x00ADB4BE]\n",
+      "\tBaseThreadInitThunk [0x7600FCC9+25]\n",
+      "\tRtlGetAppContainerNamedObjectPath [0x773780CE+286]\n",
+      "\tRtlGetAppContainerNamedObjectPath [0x7737809E+238]\n",
       "\n"
      ]
     }
@@ -128,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +198,7 @@
     "# Ket noi database\n",
     "# Thong tin ket noi\n",
     "hostname = 'localhost' \n",
-    "# port = 5432\n",
+    "port = 5432\n",
     "database = 'postgres'\n",
     "username = 'da'\n",
     "password = 'da123@'\n",
@@ -203,35 +207,21 @@
     "try:\n",
     "    connection = psycopg2.connect(\n",
     "        host=hostname,\n",
-    "        # port=port,\n",
+    "        port=port,\n",
     "        database=database,\n",
     "        user=username,\n",
     "        password=password\n",
     "    )\n",
     "    cursor = connection.cursor()\n",
     "    print(\"Kết nối thành công!\")\n",
-    "\n",
-    "    # Kiểm tra quyền truy cập\n",
-    "    cursor.execute(\"\"\"\n",
-    "        SELECT grantee, table_schema, table_name, privilege_type\n",
-    "        FROM information_schema.role_table_grants\n",
-    "        WHERE table_schema IN ('public');\n",
-    "    \"\"\")\n",
-    "    grants = cursor.fetchall()\n",
-    "    for grant in grants:\n",
-    "        print(f\"Grantee: {grant[0]}, Schema: {grant[1]}, Table: {grant[2]}, Privilege: {grant[3]}\")\n",
     "except OperationalError as e:\n",
     "    print(f\"Lỗi kết nối: {e}\")\n",
-    "# finally:\n",
-    "#     if connection:\n",
-    "#         cursor.close()\n",
-    "#         connection.close()\n",
-    "#         print(\"Kết nối PostgreSQL đã đóng\")\n"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,26 +233,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "https://www.imdb.com/title/tt3083016/?ref_=sr_t_1 Cảnh Sát Beverly Hills: Axel F 2024-07-03 00:00:00 United States 6.5 $150,000,000 $ 150000000 Action\n",
-      "SQL Error for https://www.imdb.com/title/tt3083016/?ref_=sr_t_1: relation \"CRAWLING_DATA.film\" does not exist\n",
-      "LINE 2:     insert into \"CRAWLING_DATA\".film (url_film, name_film, r...\n",
-      "                        ^\n",
-      "\n",
-      "https://www.imdb.com/title/tt14257104/?ref_=sr_t_2 Axel Falcon 2024-06-01 00:00:00 United Kingdom None £4,000 £ 4000 Action\n",
-      "SQL Error for https://www.imdb.com/title/tt14257104/?ref_=sr_t_2: relation \"CRAWLING_DATA.film\" does not exist\n",
-      "LINE 2:     insert into \"CRAWLING_DATA\".film (url_film, name_film, r...\n",
-      "                        ^\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Truy cập trang web va lay du lieu\n",
     "\n",
@@ -303,17 +276,38 @@
     "    print(url_film, title_film_detail.text, release_date_first, country_origin, rating, budget, currency_budget, amount_budget , genres)\n",
     "    # insert du lieu vao database\n",
     "    insert_query = '''\n",
-    "    insert into \"CRAWLING_DATA\".film (url_film, name_film, release_date, country_origin, rating, budget, currency_budget, amount_budget, genres)\n",
+    "    insert into film (url_film, name_film, release_date, country_origin, rating, budget, currency_budget, amount_budget, genres)\n",
     "    VALUES (%s, %s, %s, %s, %s, %s, %s, %s, %s)\n",
     "    '''\n",
     "    try:\n",
-    "        cursor.execute(insert_query,(url_film, name_film, release_date_first,  country_origin, rating, budget, currency_budget, amount_budget, genres))\n",
+    "        cursor.execute(insert_query,(url_film, name_film, release_date_first, country_origin, rating, budget, currency_budget, amount_budget, genres))\n",
     "        # Lưu thay đổi\n",
     "        connection.commit()\n",
+    "        print(\"Da luu data thanh cong\")\n",
     "    except Exception as e:\n",
     "        print(f\"SQL Error for {url_film}: {e}\")\n",
     "        connection.rollback()\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Kết nối PostgreSQL đã đóng\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Dong connection\n",
+    "cursor.close()\n",
+    "connection.close()\n",
+    "print(\"Kết nối PostgreSQL đã đóng\")"
    ]
   }
  ],
